# aias-server

./: .gitignore  .gitmodules  README.md  docker-compose.yml  nginx.conf
app/: Cargo.toml  Dockerfile  run.sh
app/keys/: README.md  judge_pubkey.pem  signer_privkey.pem
app/src/: handler.rs  lib.rs  main.go  main.rs  tests.rs  utils.rs
nginx/conf.d/: default.conf
