[package]
name = "app"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0.57"
serde = "1.0.115"
aias-core = { git = "https://github.com/project-aias/aias-core", rev = "978b3bb" }
fair-blind-signature = { git = "https://github.com/project-aias/fair-blind-signature", rev = "67e53b3" }