[package]
name = "app"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

[dependencies]
fair-blind-signature = { git = "https://github.com/project-aias/fair-blind-signature", rev = "2565e6d" }
aias-core = { path = "./core/core" }
actix-web = "2.0"
actix-rt = "1.0"
rusqlite = "0.24.0"
futures = "0.3.5"
serde_json = "1.0.57"
serde = "1.0.115"
actix-session = "0.3.0"
twilio = "0.1.3"
rand = "0.7.3"
actix-http = "1.0.1"
